--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "apollo-client-preset": "^1.0.8",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.9.2",
+    "lodash": "^4.17.11",
     "react": "^16.4.1",
     "react-apollo": "^2.1.6",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "react-transition-group": "^2.5.3",
+    "react-scripts": "^2.1.8",
+    "react-transition-group": "^1.2.1",
     "styled-components": "^4.1.3",
     "velocity-react": "^1.4.1"
   },
@@ -21,5 +22,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
